--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_svg: ^2.0.9
   google_fonts: ^6.1.0
   shared_preferences: ^2.2.2
-  geolocator: ^10.1.0
+  geolocator: ^11.0.0
   intl: ^0.19.0
   http: ^1.2.0
   csc_picker: ^0.2.7
@@ -53,6 +53,7 @@ dependencies:
   universal_html: ^2.2.4
   syncfusion_flutter_xlsio: ^24.2.7
   open_file: ^3.3.2
+  location: ^5.0.0-dev.8
 
 dev_dependencies:
   flutter_test:
