--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   syncfusion_flutter_xlsio: ^24.2.7
   open_file: ^3.3.2
   location: ^5.0.0-dev.8
+  syncfusion_flutter_charts: ^24.2.8
 
 dev_dependencies:
   flutter_test:
